--- a/style.css
+++ b/style.css
@@ -7,21 +7,20 @@ body{
 /* rain animation */
 i{
     position:absolute;
-    width:100%;
+    width:80%;
     height:100%;
     background:linear-gradient(transparent, #fff);
     border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 0px;
     animation: animate 5s linear infinite;
+    margin-right:5%;
 }
 
 i:nth-child(3n+1){
     background: linear-gradient(transparent, #92BAD2);
 }
-i:nth-child(3n+2){
-    background: linear-gradient(transparent, #C5E2F7);
-}
-i:nth-child(3n+3){
+
+i:nth-child(2n+1){
     background: linear-gradient(transparent, #395877);
 }
 
@@ -32,7 +31,7 @@ i:nth-child(3n+3){
     }
     100%
     {
-        transform: translateY(calc(210vh + 2000px));
+        transform: translateY(calc(200vh + 2300px));
     }
 }
 
@@ -57,13 +56,15 @@ i:nth-child(3n+3){
 }
 
 #profile-header{
+    margin-right:5%;
+    width:100%;
     background-color:rgba(93,19,90);
     margin-top: 20px;
 }
 
 .details{
     font-weight:400;
-    margin-left:30%;
+    text-align:center;
 }
 
 /* hobby section */
@@ -114,7 +115,7 @@ i:nth-child(3n+3){
 
 .piano{
     font-weight:400;
-    margin-left:30%;
+    text-align:center;
 }
 
 .piano-list h2{
@@ -200,13 +201,13 @@ i:nth-child(3n+3){
 }
 
 .facebook{
-    font-size:64px;
+    font-size:50px;
     color:#4267B2;
     transition: color 0.2s;
     text-decoration:none;
     text-align: center;
-    margin:5%;
-    width:80%;
+    margin:10%;
+    width:100%;
 }
 .facebook:hover{
     color: #000;
@@ -214,37 +215,37 @@ i:nth-child(3n+3){
 
 }
 .instagram{
-    font-size:64px;
+    font-size:50px;
     color:#E1306C;
     transition: color 0.2s;
     text-decoration:none;
     text-align: center;
-    width:80%;
-    margin:5%;
+    width:100%;
+    margin:10%;
 }
 .instagram:hover{
     color:#F56040;
 }
 .discord{
-    font-size:64px;
+    font-size:50px;
     color:#7289DA;
     transition: color 0.2s;
     text-decoration:none;
     text-align: center;
-    width:80%;
-    margin:5%;
+    width:100%;
+    margin:10%;
 }
 .discord:hover{
     color:#282b30
 }
 .github{
-    font-size:64px;
+    font-size:50px;
     color:#333;
     transition: color 0.2s;
     text-decoration:none;
     text-align: center;
-    width:80%;
-    margin:5%;
+    width:100%;
+    margin:10%;
 
 }
 .github:hover{
@@ -302,9 +303,9 @@ i:nth-child(3n+3){
       ),
       linear-gradient(
         to right,
-        rgba(93,19,90),
-        rgba(244,157,38),
-        rgba(208,55,108)
+        #C5E2F7,
+        #92BAD2,
+        #53789E
     );
     background-size: 100% 3px, 0 3px;
     background-position: 100% 100%, 0 100%;
