--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-color:#000000;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin:0;
+    margin-bottom: 10px;
 }
 
 /* rain animation */
@@ -24,7 +25,7 @@ i:nth-child(2n+1){
     background: linear-gradient(transparent, #53789E);
 }
 i:nth-child(2n){
-    background: linear-gradient(transparent, #395877);
+    background: linear-gradient(transparent, #d1e8f9);
 }
 
 @keyframes animate{
@@ -34,26 +35,38 @@ i:nth-child(2n){
     }
     100%
     {
-        transform: translateY(calc(200vh + 2400px));
+        transform: translateY(calc(350vh + 2500px));
     }
 }
 
 /* profile */
+.yuzu img{
+    position:relative;
+    border-radius:50%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    height:25%;
+    width:25%;
+}
 .profile{
     font-family:"Lucida Handwriting", cursive;
-    color: #D534CF;
+    color: #dd5bd8;
     position:relative;
     width:80%;
     height:80%;
     margin:auto;
     overflow:hidden;
 }
-
+.profile p{
+    font-weight:400;
+    text-align:center;
+}
 .profile h2{
     font-family:"Lucida Handwriting", cursive;
     font-weight:600;
     text-align: center;
-    color: #D534CF;
+    color: #dd5bd8;
     text-transform:uppercase;
     letter-spacing:0.2em;
 }
@@ -61,7 +74,7 @@ i:nth-child(2n){
 #profile-header{
     margin-right:5%;
     width:100%;
-    background-color:rgba(93,19,90);
+    background-color:#5D135A;
     margin-top: 20px;
 }
 
@@ -71,8 +84,17 @@ i:nth-child(2n){
 }
 
 /* hobby section */
+.coast img{
+    position:relative;
+    border-radius:50%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    height:30%;
+    width:30%;
+}
 .hobby-list{
-    color: #F56040;
+    color: aqua;
     font-family:"Lucida Handwriting", cursive;
     width:800px;
     height:275px;
@@ -83,7 +105,10 @@ i:nth-child(2n){
     margin:auto;
     overflow:hidden;
 }
-
+.hobby-list p{
+    font-weight:400;
+    text-align:center;
+}
 .hobby-list h2{
     font-family:"Lucida Handwriting", cursive;
     font-weight:600;
@@ -98,10 +123,19 @@ i:nth-child(2n){
 }
 
 #hobby-header{
-    background-color: #5D3B13;
+    background-color: #13355D;
 }
 
 /* piano section */
+.pose img{
+    position:relative;
+    border-radius:50%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    height:25%;
+    width:25%;
+}
 #piano-header{
     background-color: #135D16;
 }
@@ -120,7 +154,10 @@ i:nth-child(2n){
     font-weight:400;
     text-align:center;
 }
-
+.piano-list p{
+    font-weight:400;
+    text-align:center;
+}
 .piano-list h2{
     font-family:"Lucida Handwriting", cursive;
     font-weight:600;
@@ -130,9 +167,17 @@ i:nth-child(2n){
 }
 
 /* minecraft section */
+.skindex img{
+    position:relative;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    height:30%;
+    width:30%;
+}
 #minecraft-header{
-    background-color: #13355D;
-    color: aqua;
+    background-color: #f77c61;
+    color: #791b06;
 }
 
 .row{
@@ -263,59 +308,55 @@ i:nth-child(2n){
     margin-left:auto;
     margin-right:auto;
     margin-top:20px;
-    height:30%;
-    width:30%;
+    height:20%;
+    width:20%;
 }
 
 /* navigation bar + animation */
+/* position is fixed and has its z-index set so that it will be layered on top of other sections */
 #navbar{
     font-family:"Lucida Handwriting", cursive;
-    position:relative;
+    position:fixed;
+    z-index:9999;
     background-color: #660000;
     color:azure;
     width:100%;
-    height:100%;
+    height:100px;
 }
 
 #navbar ul{
-    padding:30px;
+    padding:2%;
     margin:15px;
     list-style:none;
+    display:flex;
 }
 
 #navbar li{
+    list-style:none;
     display:inline;
     margin-left:5%;
-    padding-top:10px;
     position:relative;
 }
 
 .section a{
+    position: relative; 
+    transition: .5s;
     text-decoration:none;
-    color:white;
+    color:#53789E;
     font-size:18px;
     padding-bottom:5px;
 }
 
-.section a{
-    background:
-      linear-gradient(
-        to right,
-        rgb(255, 255, 255),
-        rgb(255, 255, 255)
-      ),
-      linear-gradient(
-        to right,
-        #C5E2F7,
-        #92BAD2,
-        #53789E
-    );
-    background-size: 100% 3px, 0 3px;
-    background-position: 100% 100%, 0 100%;
-    background-repeat: no-repeat;
-    transition: background-size 400ms;
-  }
-
+.section a::before{
+  background: #92BAD2;
+}
+a:hover::before{
+    transform: scale(1.1);
+  box-shadow: 0 0 20px #0c3756;
+    background-size: 0 15px, 100% 15px;
+}
 a:hover{
-    background-size: 0 4px, 100% 4px;
+    color: white;
+  box-shadow: 0 0 15px #0c3756;
+  text-shadow: 0 0 15px #0c3756;
 }
