--- a/style.css
+++ b/style.css
@@ -176,8 +176,8 @@ i:nth-child(2n){
     width:30%;
 }
 #minecraft-header{
-    background-color: #f77c61;
-    color: #791b06;
+    color: #f77c61;
+    background-color: #791b06;
 }
 
 .row{
@@ -318,7 +318,7 @@ i:nth-child(2n){
     font-family:"Lucida Handwriting", cursive;
     position:fixed;
     z-index:9999;
-    background-color: #660000;
+    background-color: #0c3756;
     color:azure;
     width:100%;
     height:100px;
