fixed colouring issues

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ i:nth-child(2n){
     font-family:"Lucida Handwriting", cursive;
     position:fixed;
     z-index:9999;
-    background-color: #0c3756;
+    background-color: #660000;
     color:azure;
     width:100%;
     height:100px;
